fixed overlapping footer

--- a/style.css
+++ b/style.css
@@ -20,10 +20,6 @@ body {
     min-height: 100vh;
 }
 
-.content-wrap {
-    padding-bottom: 2.5rem;
-}
-
 h1 {
     margin-top: 50px;
     margin-bottom: -15px;
@@ -54,11 +50,11 @@ h1 {
 }
 
 footer {
-    position: absolute;
+    position: relative;
     text-align: center;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 6rem;
     padding-bottom: 20px;
     font-family:'Rubik', sans-serif;
     font-weight: 500;
